--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "eslint": "^8.57.0",
     "eslint-config-mdcs": "^5.0.0",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "three": "^0.90.0"
   }
 }
