--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "n8ao": "^1.8.1",
+    "postprocessing": "^6.35.3",
     "three": "^0.163.0"
   }
 }
