--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "n8ao": "^1.8.1",
+    "poisson-disk-sampling": "^2.3.1",
     "postprocessing": "^6.35.3",
     "three": "^0.163.0"
   }
