--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "n8ao": "^1.8.1",
     "poisson-disk-sampling": "^2.3.1",
     "postprocessing": "^6.35.3",
+    "stats-gl": "^2.2.8",
     "three": "^0.163.0"
   }
 }
