--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite build && vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.0",
     "eslint": "^8.57.0",
     "eslint-config-mdcs": "^5.0.0",
+    "eslint-config-react-app": "^7.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "vite": "^5.2.0"
   },
   "dependencies": {
