--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-mdcs": "^5.0.0",
     "eslint-config-react-app": "^7.0.1",
+    "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.0",
+    "framer-motion": "^11.2.9",
     "n8ao": "^1.8.1",
     "poisson-disk-sampling": "^2.3.1",
     "postprocessing": "^6.35.3",
+    "react-icons": "^5.2.1",
     "stats-gl": "^2.2.8",
     "three": "^0.163.0"
   }
