--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postprocessing": "^6.35.3",
     "react-icons": "^5.2.1",
     "stats-gl": "^2.2.8",
-    "three": "^0.163.0"
+    "three": "^0.163.0",
+    "zustand": "^4.5.2"
   }
 }
